# adler32-rs

./: Cargo.toml  README.md
.github/workflows/: test.yml
adler32/: struct.RollingAdler32.html
src/: bench.rs  lib.rs
