[package]
name = "adler32"
version = "1.0.4"
authors = ["Remi Rampin <remirampin@gmail.com>"]
description = "Minimal Adler32 implementation for Rust."
documentation = "https://docs.rs/adler32/"
repository = "https://github.com/remram44/adler32-rs"
readme = "README.md"
keywords = ["adler32", "hash", "rolling"]
license = "Zlib"

[dev-dependencies]
rand = "0.4"
