[package]
name = "adler32"
version = "1.1.0"
authors = ["Remi Rampin <remirampin@gmail.com>"]
edition = "2018"
description = "Minimal Adler32 implementation for Rust."
documentation = "https://docs.rs/adler32/"
repository = "https://github.com/remram44/adler32-rs"
readme = "README.md"
keywords = ["adler32", "hash", "rolling"]
license = "Zlib"

[dependencies]
# Internal features, only used when building as part of libstd, not part of the
# stable interface of this crate.
core = { version = '1.0.0', optional = true, package = 'rustc-std-workspace-core' }
compiler_builtins = { version = '0.1.2', optional = true }

[features]
default = ['std']
std = []

# Internal feature, only used when building as part of libstd, not part of the
# stable interface of this crate.
rustc-dep-of-std = ['core', 'compiler_builtins']

[dev-dependencies]
rand = "0.4"
bencher = "0.1.5"

[[bench]]
path = "src/bench.rs"
name = "bench"
harness = false
